# R7017E_biorobotics

./: Cargo.toml
examples/: R7017E_task1.rs  R7017E_task2.rs  syms.rs
src/: decore.rs  graphing.rs  lib.rs  link.rs  main.rs  pose.rs  syms.rs
src/syms/: display.rs  opt.rs
