[package]
name = "robotics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
matrs = {git = "https://github.com/ivario123/matrix_math.git"}
plotly = { version = "0.8.4", features = ["kaleido"]}
num = {version = "0.4.0",default-features = false}
num-traits = { version = "0.2", default-features = false, features = ["libm"] }
array-init = "2.1.0"


[features]
# graphing = ["plotly"]
# default = ["graphing"]
